--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ main {
     color: white;
     font-size: 1.8rem;
     font-family: 'Great Vibes', cursive; /* Fuente decorativa */
+    text-decoration: none;
     border-radius: 50%;
     width: 60px;
     height: 60px;
