--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ main {
 
 
 .logo {
-    width: 100px;
+    width: 200px;
     margin-bottom: 10px;
 }
 
@@ -64,8 +64,8 @@ main {
 }
 
 .footer-personalizado {
-    background-color: #5a3e2b; /* Violeta profundo */
-    color: black;
+    background-color: #2c2c2c; /* Violeta profundo */
+    color: white;
     font-family: 'Lato', sans-serif;
     font-size: 0.95rem;
     padding: 2rem 1rem;
@@ -102,6 +102,7 @@ main {
 
 h3 {
    font-family: 'Great Vibes', cursive;
+   font-size: 2.5rem;
    text-align: center;
 }
 
