--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ main {
 }
 
 h3 {
-   font-family: 'Great Vibes', cursive;
+/*   font-family: 'Great Vibes', cursive; */
    font-size: 2.5rem;
    text-align: center;
 }
