--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ main {
 
 .footer-personalizado {
     background-color: #2c2c2c; /* Violeta profundo */
-    color: white;
+    color: #25D366;
     font-family: 'Lato', sans-serif;
     font-size: 0.95rem;
     padding: 2rem 1rem;
@@ -75,13 +75,13 @@ main {
 }
 
 .footer-personalizado a {
-    color: #e6d3b3;
+    color: #2ecc71;
     text-decoration: none;
     transition: color 0.3s ease, text-decoration 0.3s ease;
 }
 
 .footer-personalizado a:hover {
-    color: #ffd89b;
+    color: #1ebe57;
     text-decoration: underline;
 }
 
