--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ main {
 
 .footer-personalizado {
     background-color: #2c2c2c; /* Violeta profundo */
-    color: #25D366;
+    color: white;
     font-family: 'Lato', sans-serif;
     font-size: 0.95rem;
     padding: 2rem 1rem;
@@ -74,16 +74,29 @@ main {
     box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.footer-personalizado a {
-    color: #2ecc71;
+/*.footer-personalizado a {
+    color: #e6d3b3;
     text-decoration: none;
     transition: color 0.3s ease, text-decoration 0.3s ease;
 }
 
 .footer-personalizado a:hover {
-    color: #1ebe57;
+    color: #ffd89b;
+    text-decoration: underline;
+} */
+
+.link-whatsapp {
+    color: #25D366; /* verde WhatsApp */
+    font-weight: bold;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.link-whatsapp:hover {
+    color: #1ebe57; /* verde más oscuro al pasar el mouse */
     text-decoration: underline;
 }
+
 
 #error {
     text-align: center;
