--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ main {
 }
 
 .footer-personalizado {
-    background-color: #2c2c2c; /* Violeta profundo */
+    background-color: #2c2c2c;
     color: white;
     font-family: 'Lato', sans-serif;
     font-size: 0.95rem;
