--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ main {
 }
 
 h3 {
-/*   font-family: 'Great Vibes', cursive; */
+   font-family: 'Great Vibes', cursive; 
    font-size: 2rem;
    text-align: center;
 }
