--- a/style.css
+++ b/style.css
@@ -51,17 +51,31 @@ main {
 }
 
 #galeria {
-    display: grid;
+   /* display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 15px;
+    gap: 15px; */
     padding: 1rem;
 }
 
-.imagen img {
+/*.imagen img {
     width: 100%;
     border-radius: 10px;
     box-shadow: 0 0 5px #ccc;
+} */
+
+.gallery-img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0 0 5px #ccc;
+    transition: transform 0.3s ease;
 }
+
+.gallery-img:hover {
+    transform: scale(1.05);
+}
+
 
 .footer-personalizado {
     background-color: #2c2c2c;
